--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "firebase": "^7.19.1",
     "postcss-cli": "^7.1.2",
     "react": "^16.13.1",
+    "react-day-picker": "^7.4.8",
     "react-dom": "^16.13.1",
     "react-responsive": "^8.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-spring": "^8.0.27",
+    "react-toastify": "^6.0.8",
     "recharts": "^1.8.5",
     "tailwindcss": "^1.8.3"
   },
