--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-day-picker": "^7.4.8",
     "react-dom": "^16.13.1",
     "react-responsive": "^8.1.0",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-spring": "^8.0.27",
